--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Jan 11 21:23:00 1997  Jeff Bailey  (jbailey@gnu.org)
+
+	* configure.in:  Create po/Makefile to fix make maintainer-clean.
+			 Fix ALL_LINGUAS statement.
+
 Sun Jan 11 18:35:00 1997  Jeff Bailey  (jbailey@gnu.org)
 
 	* po/: Create & populate
