--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Oleo 1.6.6
+
+Blah blah blah..  Release files!
 ===== Oleo 1.6 =====
 
 Many patches from volunteers have been applied.  See the ChangeLog to
