--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+Fri Feb 27 22:35:00 1997  Jeff Bailey  (jbailey@gnu.org)
+
+	* src/input.c: Remove more debug notes.
+	* */Makefile(., .in): regenerate.
+
+Sun Feb 1  20:00:00 1997  Jeff Bailey  (jbailey@gnu.org)
+
+	* src/io-gtk.c: Begin to add gtk colours into Oleo.  req'd to
+	show the cursor in the grid.
+
+Mon Jan 26 19:15:00 1997  Jeff Bailey  (jbailey@gnu.org)
+
+	* lib/Makefile.am: Distribute getdate.h
+
 Mon Jan 26 18:25:00 1997  Jeff Bailey  (jbailey@gnu.org)
 
 	* oleobug.in: Create - Thanks to the GLIBC people!
