--- a/THANKS
+++ b/THANKS
@@ -5,7 +5,7 @@ bribed me to put their names in here):
 
 Jeff Bailey, Tom Lord, A whole pile of people from the ChangeLog,
 Joel N. Weber II, Richard Stallman, Mark E. Davidson, Ted Arm
-Steve Fisk, Kai Getrost.
+Steve Fisk, Kai Getrost, Scott Heavner.
 
 Other people deserve a word of thanks:
 Tom Tromey & Friends: For making AutoMake.
