--- a/THANKS
+++ b/THANKS
@@ -5,7 +5,12 @@ bribed me to put their names in here):
 
 Jeff Bailey, Tom Lord, A whole pile of people from the ChangeLog,
 Joel N. Weber II, Richard Stallman, Mark E. Davidson, Ted Arm
-Steve Fisk, Kai Getrost, Scott Heavner.
+Steve Fisk, Kai Getrost, Scott Heavner, Markky Rossi.
+
+Special Mention:
+Frank Bennett: For making a collection of patches that had been floating
+around on the net, and doing alot of work, even when there wasn't an
+obvious maintainer!
 
 Other people deserve a word of thanks:
 Tom Tromey & Friends: For making AutoMake.
