Web page: more info
doc/ directory: add a file for the Motif interface, hook it up
	at the end of the other manual sections.

--- a/doc/oleo.texi
+++ b/doc/oleo.texi
@@ -115,6 +115,7 @@ means complete, nor necessarily accurate for that matter.
 * Functions::                   
 * Extending Oleo::
 * Reporting Bugs::
+* Motif::
 * Key Index::
 * Command Index::
 * Function Index::
@@ -136,6 +137,7 @@ means complete, nor necessarily accurate for that matter.
 @include functions.texi
 @include interface.texi
 @include bugs.texi
+@include motif.texi
 
 @page
 @node   Key Index, Command Index, Top, Top
