--- a/doc/motif.texi
+++ b/doc/motif.texi
@@ -9,6 +9,7 @@
 * Alternatives::
 * Using the mouse::
 * Using the keyboard shortcuts::
+* Using Help::
 * Fallback::
 @end menu
 
@@ -34,15 +35,39 @@ The OSF has merged with X/Open,
 the new name of the organisation is The Open Group.
 
 A free implementation of Motif, called LessTif,
-which is available from http://www.lesstif.org,
+which is available from
+@url{http://www.lesstif.org},
 can be used instead of Motif.
+
 LessTif is covered by the LGPL (Library General Public License).
 
 @node Advantages, What you need, LessTif, Motif
 @section Advantages
 
+Advantages to using either the Motif or the GTK interface to Oleo
+are the same as for any GUI: users with little experience will find
+it easier to get started with the application.
+The GUI interfaces also happen to be more aesthetically pleasing.
+
 @node What you need, Alternatives, Advantages, Motif
 @section What you need
+
+A user of Oleo typically only needs a recent Oleo distribution,
+which he installs through his operating system's standard mechanism.
+
+Someone who's building Oleo from sources will need several packages
+that Oleo depends on :
+@itemize @bullet
+@item Xbae widgets
+@url{http://xbae.syd.net.au}
+@item XmHTML
+@url{http://www.xs4all.nl/~ripley/XmHTML}
+@item GNU plotutils
+@url{http://www.gnu.org}
+@item Motif or LessTif
+@url{http://www.opengroup.org}
+@url{http://www.lesstif.org}
+@end itemize
 
 @node Alternatives, Using the mouse, What you need, Motif
 @section Alternatives
@@ -56,10 +81,52 @@ GTK is the FSF's official GUI toolkit.
 @node Using the mouse, Using the keyboard shortcuts, Alternatives, Motif
 @section Using the mouse
 
-@node Using the keyboard shortcuts, Fallback, Using the mouse, Motif
+The mouse is used in the same manner as in any Motif application.
+
+The top of the Oleo window is a horizontal bar which is called the menu bar.
+It consists of a small number of buttons
+(represented by words such as File, Edit, ...).
+
+Using the mouse to point at such a word, you can click MB1
+on such a button to make a pulldown menu appear.
+MB1 is usually the left mouse button.
+
+The words in these pulldown menus are action buttons which should perform
+actions that the user can understand.
+
+You can select a cell in the spreadsheet by clicking MB1 in it.
+Once a cell is selected, its position and current value are displayed
+in a status area in the upper left of the Oleo window
+(just below the menu bar).
+The area to the right of that is the formula editor:
+it displays the formula on this cell, if any.
+
+Formulas should be edited in the formula editor.
+
+@node Using the keyboard shortcuts, Using Help, Using the mouse, Motif
 @section Using the keyboard shortcuts
 
-@node Fallback, , Using the keyboard shortcuts, Motif
+Using the method described above you can pull down a menu which reveals
+a number of action buttons. These buttons typically contain a text such
+as @code{Open   Ctrl-O}.
+
+Additionally, the O is underlined.
+
+The Ctrl-O means that you can press down the Control key on your keyboard,
+and while doing that, depress the O key. This should activate the button.
+
+The underlining means that once you've pulled down this menu,
+you should be able to activate this button by just the O key.
+
+The pulldown menu, which was indicated by the word File (with underlined F),
+can in itself be triggered by pressing the Alt key and depressing the F key.
+
+@node Using Help, Fallback, Using the keyboard shortcuts, Motif
+@section Using Help
+
+
+
+@node Fallback, , Using Help, Motif
 @section Fallback
 
 If you have a version of oleo that has been built with Motif support,
