--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed  7 Oct 21:54:38 1998 Danny Backx (danny@gnu.org)
+	* configure.in, doc/Makefile.am : check whether we have texi2html
+	  and cope with failure on that test.
+	  Note that texi2html is widely available on the Internet
+	  so you should get it :-)
+
 Fri  2 Oct 00:09:06 1998 Danny Backx (danny@gnu.org)
 	* src/io-motif.c, io-utils.c: file save didn't work unless the user
 	  had manipulated the "file format" option menu. Fixed.
